# approvals-fetcher

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/abi/: IERC20.json  IFeedRegistry.json
