[package]
name = "approvals-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version="*", features = ["rt-multi-thread", "macros"] }
alloy = { version = "0.2.0", features = [ "full" ] }
eyre = "0.6.12"
reqwest = "0.12.5"
regex = "1.9.0"
clap = { version = "4.3.21", features = ["derive"] }
comfy-table = "7.1.1"
num-format = "0.4.4"